infra/k8s/12-kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: event-platform
spec:
  selector:
    app: kafka
  ports:
    - name: broker
      port: 9092
      targetPort: 9092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: event-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.6.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9092
              name: broker
            - containerPort: 9093
              name: controller
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - kafka-topics --bootstrap-server localhost:9092 --list >/dev/null 2>&1
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 12
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - kafka-topics --bootstrap-server localhost:9092 --list >/dev/null 2>&1
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 6
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "1"
              memory: 2Gi
