infra/k8s/20-data-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-api-service
  namespace: event-platform
spec:
  selector:
    app: data-api-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-api-service
  namespace: event-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: data-api-service
  template:
    metadata:
      labels:
        app: data-api-service
    spec:
      containers:
        - name: data-api-service
          image: flowforge-data-api-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 6
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
