infra/k8s/21-data-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-worker-service
  namespace: event-platform
spec:
  selector:
    app: data-worker-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-worker-service
  namespace: event-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-worker-service
  template:
    metadata:
      labels:
        app: data-worker-service
    spec:
      containers:
        - name: data-worker-service
          image: flowforge-data-worker-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: http
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 6
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
